# docstring-auditor

./: .aidev  .gitignore  Dockerfile  README.md  action.yml  pyproject.toml  setup.py
.github/workflows/: image-latest.yml  image-release.yml  image-test.yml  image.yml  release.yml  suggester-workflow.yml  test-workplace-action.yml  test.yml
docstring_auditor/: main.py
tests/: disabled_test_critique.py  test_auditor.py  test_autofix.py  test_critique.py  test_exit_codes.py  test_extractor.py  test_reporter.py
